# tool-timeout-wrap

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/tool_timeout_wrap/: __init__.py
tests/: test_timeout.py
